--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --mode=development",
     "test": "jest"
   },
@@ -20,8 +21,10 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.6.0",
     "live-server": "^1.2.0",
+    "mini-css-extract-plugin": "^0.4.3",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "normalize-css": "^2.3.1",
@@ -41,9 +44,9 @@
     "webpack-dev-server": "^3.1.8"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "regenerator-runtime": "^0.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0"
+    "regenerator-runtime": "^0.12.1"
   }
 }
