--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --mode=development",
-    "test": "jest"
+    "test": "jest",
+    "start": "node server/server.js",
+    "heroku-postbuild":"yarn run build:prod"
   },
   "author": "Michael Castro",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^1.0.0",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.6.0",
     "live-server": "^1.2.0",
