--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-server": "webpack-dev-server --mode=development",
     "test": "jest",
     "start": "node server/server.js",
-    "heroku-postbuild":"yarn run build:prod"
+    "heroku-postbuild": "yarn run build:prod"
   },
   "author": "Michael Castro",
   "license": "ISC",
@@ -24,9 +24,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^23.6.0",
-    "live-server": "^1.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",      
     "mini-css-extract-plugin": "^0.4.3",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
@@ -43,13 +41,15 @@
     "uuid": "^3.3.2",
     "validator": "^10.7.1",
     "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "regenerator-runtime": "^0.12.1"
+    "regenerator-runtime": "^0.12.1",
+    "jest": "^23.6.0",
+    "live-server": "^1.2.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
