--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",      
+    "extract-text-webpack-plugin": "^3.0.2",
     "mini-css-extract-plugin": "^0.4.3",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "normalize-css": "^2.3.1",
+    "numeral": "^2.0.6",
     "react": "^16.5.0",
     "react-dates": "^18.1.0",
     "react-dom": "^16.5.0",
@@ -47,9 +48,9 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "regenerator-runtime": "^0.12.1",
     "jest": "^23.6.0",
     "live-server": "^1.2.0",
+    "regenerator-runtime": "^0.12.1",
     "webpack-dev-server": "^3.1.8"
   }
 }
