--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -35,7 +36,7 @@
     "react": "^16.5.0",
     "react-dates": "^18.1.0",
     "react-dom": "^16.5.0",
-    "react-modal": "^3.5.1",
+    "react-modal": "^3.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
